03.01.nextcloud.persistentvolume.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
