nextcloud-pvc.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
