nextcloud-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deployment
  labels:
    app: nextcloud
  namespace: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
        - name: nextcloud-pv-storage
          persistentVolumeClaim:
            claimName: nextcloud-pv-claim
      containers:
        - name: nextcloud
          image: nextcloud:20
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: "/var/www/html"
              name: nextcloud-pv-storage
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - name: http
      port: 8080
      targetPort: 80
