03.03.nextcloud.ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`nextcloud.<your>.<domain>`)
    kind: Rule
    services:
    - name: nextcloud
      port: 8080
  tls:
    certResolver: myresolver
